# dodo-is-api-python-wrapper

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: unittest.yaml
dodo_is_api/: helpers.py  mappers.py
dodo_is_api/connection/: asynchronous.py  base.py  http_clients.py  synchronous.py
dodo_is_api/models/: __init__.py  courier_orders.py  delivery_statistics.py  late_delivery_vouchers.py  orders_handover_statistics.py  orders_handover_time.py  production_productivity_statistics.py  stop_sales.py
tests/: test_helpers.py  test_http_clients.py  test_mappers.py
tests/test_connections/: test_base.py  test_raise_for_status.py  test_synchronous.py
