[tool.poetry]
name = "dodo-is-api"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "dodo_is_api"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
